--- a/app/mobile/profile.html
+++ b/app/mobile/profile.html
@@ -63,7 +63,7 @@
       <div id="main-wrap" class="pos-rlt">
         <div class="user-account-profile pad10">
           <h2 class="text-lg f-bold m-t-sm m-b text-center">Profile Setting</h2>
-          <form method="GET" action="mobile/profile.html" class="sapta-form user-profile m-t">
+          <form method="GET" action="/my-profile-setting.html" class="sapta-form user-profile m-t">
             <div class="content-block b pad10 m-b-md">
               <p>  You can change your account detail by directly typing on the text fields. Leave the text fields as they are if you do not wish to change them.</p>
               <div class="block m-t-xs m-l-xs m-b-md">
