--- a/app/flight-payment-step-4.html
+++ b/app/flight-payment-step-4.html
@@ -27,8 +27,62 @@
         <div class="clearfix"></div>
       </div>
     </div>
-    <div class="flight-payment step-4 p-t-70">
-      <p></p>
+    <div class="container p-t-70">
+      <div class="flight-payment-step-4 e-ticket">
+        <script>
+          //- remove this when implementation to backend, this just a demo
+          window.setTimeout(function() {
+            window.location.href = location.origin + '/flight-payment-step-5.html'
+          }, 3000);
+          
+        </script>
+        <div class="ticket-header">
+          <div class="order-number pull-left"><span>Order No.</span><strong class="f-bold">3100020</strong></div>
+          <div class="departure pull-left">QZ 888H | CGK - DPS | Kamis, 12 Feb 2015</div>
+          <div class="return pull-left">QZ 8298 | DPS - CGK | Minggu, 16 Feb 2015</div>
+          <div class="clearfix"></div>
+        </div>
+        <h4 class="text-center section-title m-t-sm m-b-lg text-c-l text-left text-rounded">Status Penerbitan&nbsp;<span class="text-yellow">E-Ticket Anda</span></h4>
+        <p class="message-thank-you text-center">
+          <div class="m-l-xxl m-r-xxl text-center text-black">Terima kasih telah melakukan pemesana di Saptatour.com. Di bawah ini adalah status pemesanan Anda. Halaman ini akan diperbaharui secara otomatis. Mohon jangan tutup halaman ini sampai proses selesai.</div>
+          <div class="m-t-lg text-center block f-bold text-u-c text-md">Pemesanan Anda saat ini sedang dalam tahap:</div>
+        </p>
+        <div class="row m-t-lg">
+          <div class="col-md-8">
+            <div class="ticket-has-created">
+              <div class="pull-left bg-white"><i class="ico ico-gear"></i></div>
+              <div class="pull-left m-l-sm"><span class="block f-bold">Sedang memproses E-Ticket and</span><span class="block m-t-xs">Pembayaran anda telah kami terima dan saat ini E-Ticket Anda sedang dalam <br />proses penerbitan di sistem kami</span></div>
+              <div class="clearfix"></div>
+            </div>
+          </div>
+          <div class="col-md-4 waiting-ticket text-center">
+            <p class="m-t-md">E-Ticket akan diterbitkan dalam:</p>
+            <div class="block m-t-xs bg-white"><i class="ico ico-waiting animate-spin"></i><span class="m-l-sm text-xl f-bold text-primary inline">29 Menit 46 Detik</span></div>
+          </div>
+          <div class="clearfix"></div>
+        </div>
+        <div class="tanda-bukti-pemesanan m-t-lg">
+          <h4 class="m-b-xl text-center section-title text-c-l text-left text-rounded">Tanda Bukti Pemesanan&nbsp;<span class="text-yellow">(Bukan Tiket)</span></h4>
+          <div class="pull-left info b-r"><strong class="f-bold">No. Pesanan</strong><span class="block m-t-xs">31000020</span><strong class="f-bold m-t-md block">Daftar Penumpang</strong>
+            <ol>
+              <li class="m-t-sm"><span class="block">Ms Esperanza Kumala Wendyono</span><span class="block">Jenis tiket: Dewasa</span></li>
+              <li class="m-t-md"><span class="block">Mr Alexander Adijana</span><span class="block">Jenis tiket: Dewasa</span></li>
+            </ol>
+          </div>
+          <div class="pull-left info right"><strong class="f-bold block m-b-sm">Info Penerbangan</strong>
+            <p><span class="block">Penerbangan:  Jakarta ke Denpasar (AirAsia)</span><span class="block">Tanggal:  Kamis, 12 Feb 2015 (Jam 13.00</span><span class="block m-t-md">Penerbangan:  Denpasar ke Jakarta (AirAsia)</span><span class="block">Tanggal:  Senin, 16 Feb 2015 (Jam 13.00</span></p>
+            <p class="m-t-lg"><strong class="f-bold block m-b-sm">Informasi Pembayaran</strong><span class="block">Harga total:  Rp 1,500,000</span><span class="block">Cara Pembayaran:  Kartu Kredit</span></p>
+          </div>
+          <div class="clearfix"></div>
+        </div>
+        <div class="m-t-lg m-b-xl message-customer-service">Jika mengalami kesulitan, Anda dapat menghubungi Customer Service 24 Hours kami di  021 270 2727 ataul email kami di&nbsp;<a href="#">callcentre@saptatours.com</a></div>
+        <div class="wrapper-lg m-t-lg ssl-message">
+          <div class="m-l-n-xl"><img src="img/ssl-image.png" alt="" class="block pull-left m-l-n-xs">
+            <p class="pull-left block m-l-md">Sapta Tour selalu mementingkan keamanan transaksi Anda. Semua transaksi melalui Saptatour.com dijamin 100% aman</p>
+            <div class="clearfix"></div>
+          </div>
+        </div>
+      </div>
     </div>
     <div class="footer">
       <div class="container">
